--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,25 @@
   font-weight: 100 900;
   font-style: normal;
 }
+@font-face {
+  font-family: "PT-sans";
+  src: url("/fonts/PTSans-Regular.ttf") format("truetype");
+  font-weight: 100 900;
+  font-style: normal;
+}
+@font-face {
+  font-family: "PT-sans-bold";
+  src: url("/fonts/PTSans-Bold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Bounded";
+  src: url("/fonts/Bounded-Variable.ttf") format("truetype");
+  font-weight: 100 900;
+  font-style: normal;
+}
 
 .Bounded {
   font-family: 'Bounded';
@@ -31,7 +50,7 @@
 body {
   color: var(--color-dark);
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'PT-sans', sans-serif;
   padding-top: 0 !important;
   line-height: 1;
   background: #2C2C31;
@@ -102,4 +121,7 @@ input[type="number"]:hover,
 input[type="number"]:focus {
     appearance: none;
     -moz-appearance: textfield;
+}
+.font-bold, .font-medium, .font-extrabold {
+  font-family: 'PT-sans-bold';
 }
